--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -30,6 +30,10 @@
         font-size: 1.5rem;
         line-height: 1.4;
         font-weight: 400;
+        max-width: 15vw;
+        @include for-size(tablet-only) {
+          max-width: none;
+        }
       }
 
       .f-title {
